# idl-language-server

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  esbuild.js  oxlint.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.json
.github/: dependabot.yml  release_template.md
.github/workflows/: check-unitest.yml  ci.yml  depbot_auto_meger.yaml  publish-release.yml  release-please.yaml
assets/: .gitattributes  api-reference.js  scalar.html
client/: package.json  pnpm-lock.yaml
client/src/: extension.ts
docs/hover/: get.md  http.md  query.md
intellij-extension/: build.gradle.kts  gradle.properties  settings.gradle.kts
openspec/changes/archive/2026-03-21-code-action-http-client/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-21-lsp-diagnostics-folding/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-21-lsp-diagnostics-folding/specs/idl-folding-ranges/: spec.md
openspec/changes/archive/2026-03-21-lsp-document-symbols/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-21-lsp-document-symbols/specs/document-symbols/: spec.md
openspec/changes/archive/2026-03-21-lsp-goto-def-decl/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-21-lsp-goto-def-decl/specs/idl-goto-declaration/: spec.md
openspec/changes/archive/2026-03-21-lsp-highlighting/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-21-lsp-highlighting/specs/lsp-syntax-highlighting/: spec.md
openspec/changes/archive/2026-03-21-lsp-hover-docs/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-21-lsp-rename-symbols/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-22-refactor-modularize-lsp/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-23-redesign-lsp-semantic-tokens/: design.md  proposal.md  tasks.md
openspec/changes/lsp-document-symbols/: design.md
openspec/specs/behavior-parity/: spec.md
openspec/specs/document-symbols/: spec.md
openspec/specs/idl-code-action-http-client/: spec.md
openspec/specs/idl-diagnostics/: spec.md
openspec/specs/idl-find-usages/: spec.md
openspec/specs/idl-folding-ranges/: spec.md
openspec/specs/idl-goto-definition/: spec.md
openspec/specs/idl-hover-docs/: spec.md
queries/: diagnostics.scm  document_symbols.scm  folding_ranges.scm  goto_symbols.scm  hover_docs.scm
scripts/: watch.mjs
src/: analysis.rs  constants.rs  context.rs  documents.rs  handlers.rs  http_client.rs  main.rs  server.rs
src/doc/: http.rs  mod.rs
vscode-extension/: package.json
vscode-extension/src/: extension.ts
zed-extension/: Cargo.toml  README.md  extension.toml
zed-extension/languages/idl/: config.toml  highlights.scm
zed-extension/src/: lib.rs
(+8 files in other folders)
