[package]
name = "idl-language-server"
version = "0.15.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.5"
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.1.0"
log = "0.4.14"
anyhow = "1.0.93"
thiserror = "2.0.3"
tree-sitter = "0.25.0"
tree-sitter-highlight = "0.25.0"
tree-sitter-idl = "3.17.0"
xidlc = { version = "0.30.0", default-features = false }
rust-embed = "8.4.0"
minijinja = "2.1.0"
xidl-parser = "0.30.0"
axum = "0.8.3"
utoipa = "5.4.0"
utoipa-scalar = { version = "0.3", features = ["axum"] }
tower-http = { version = "0.6.8", features = ["cors"] }

[lints.clippy]
collapsible_if = "allow"
