[package]
name = "idl-language-server"
version = "0.27.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.6"
ropey = "1.6.1"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.2.1"
log = "0.4.30"
anyhow = "1.0.102"
thiserror = "2.0.3"
tree-sitter = "0.25.0"
tree-sitter-highlight = "0.25.0"
tree-sitter-idl = "3.18.0"
xidlc = { version = "0.72.2", default-features = false, features = [
  "gen-rust",
  "gen-rust-axum",
  "gen-openapi",
] }
xidl-parser = "0.72.2"
rust-embed = "8.4.0"
minijinja = "2.20.0"
axum = "0.8.9"
utoipa = "5.5.0"

utoipa-scalar = { version = "0.3", features = ["axum"] }
tower-http = { version = "0.6.11", features = ["cors"] }
strsim = "0.11.1"

[lints.clippy]
collapsible_if = "allow"
